less/dashboard.less
/**
 * Copyright (c) Jupyter Development Team.
 * Distributed under the terms of the Modified BSD License.
 */
html {
    box-sizing: border-box;
}
*, *:before, *:after {
    box-sizing: inherit;
}
body {
    font-size: 14px;
    margin: 0;

    &.grid-view {
        background-color: #606672;
        background-image: url(img/noisy-texture.png);
    }
}
h1 {
    font-size: 1.8em;
}

#outer-dashboard {
    position: relative;
    padding: 15px 0;
    background-color: white;
    min-height: 100vh;

    #dashboard-container {
        margin: 0 auto;

        line-height: 1.5em;

        .dashboard-cell {
            .jp-OutputArea {
                pre {
                    background-color: transparent;
                    border: none;
                    font-family: monospace;
                    font-size: 1em;
                    line-height: 1.2em;
                    margin: 0;
                    padding: 0;
                }
            }

            &.hidden {
                display: none;
            }
        }

        .grid-stack-item.rendered_html {
            /*
                computed in dashboard.js:
                padding: (margin/2)px  (margin/2 + 6)px;
             */
        }

        @media (min-width: 768px) {
            width: 768px;
        }
        @media (min-width: 992px) {
            width: 940px;
        }
        @media (min-width: 1200px) {
            width: 1140px;
        }
    }

    .busy-indicator {
        visibility: hidden;
        position: fixed;
        top: -0.5em;
        height: 0.5em;
        width: 100%;
        border-radius: 0;
        /* change 'visibility' after 'top' transition is done */
        transition: top 0.3s, visibility 0s linear 0.3s;

        &.show {
            top: 0;
            visibility: visible;
            transition-delay: 0s;
            /* change 'visibility' before 'top' transition is done */
        }
    }
}


.show-row-only {
    background: none;

    &.single-cell .grid-stack-item {
        width: 100%;
        height: 100%;
    }

    #outer-dashboard {
        min-height: auto;
        width: auto;

        #dashboard-container {
            padding: 0;
            display: -webkit-flex;
            display: -ms-flexbox;
            display: flex;
        }
    }
}

